[gd_scene load_steps=3 format=3 uid="uid://bh3hf0r4wt7qg"]

[ext_resource type="Script" uid="uid://bewsq4537nwmj" path="res://scripts/MainMenu.gd" id="1_main_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.2, 0.25, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.15, 0.18, 1)

[node name="VersionLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 664.0
offset_right = 108.0
offset_bottom = 692.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "ver 1.00"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 64
text = "Pense Rápido!"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="CardTutorial" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardTutorial"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardTutorial/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 32
text = "TUTORIAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="VBoxContainer/CardsContainer/CardTutorial/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Aprenda a jogar"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardJogar" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardJogar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardJogar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "JOGAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="VBoxContainer/CardsContainer/CardJogar/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Derrote perguntas
de PORT/MAT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CardOpcoes" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(180, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxLabels" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardOpcoes"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardOpcoes/VBoxLabels"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "OPÇÕES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="VBoxContainer/CardsContainer/CardOpcoes/VBoxLabels"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Áudio
Vídeo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "SPACE CONFIRMAR"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "RECORDE: 0"
horizontal_alignment = 2
